--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,39 +1,61 @@
+
+#variables
+
 NAME	= libft.a
-
 CC	= gcc
-
 AR	= ar rcs
-
 HEADER	= -I libft.h
-
 CFLAGS	= -Wall -Werror -Wextra $(HEADER)
+SRCS_DIR	= srcs/
+OBJS_DIR	= objs/
 
-SRCS	= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+#Colors
 
-BONUS	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+DEF_COLOR = \033[0;39m
+GRAY = \033[0;90m
+RED = \033[0;91m
+GREEN = \033[0;92m
+YELLOW = \033[0;93m
+BLUE = \033[0;94m
+MAGENTA = \033[0;95m
+CYAN = \033[0;96m
+WHITE = \033[0;97m
 
-OBJS	= $(SRCS:.c=.o)
+#sources
 
-BOBJS	= $(BONUS:.c=.o)
+SRC_FILES	= ft_isalpha ft_isdigit ft_isalnum ft_isascii ft_isprint \
+				ft_strlen ft_strlcpy ft_strlcat ft_toupper ft_tolower ft_strchr ft_strrchr ft_strncmp \
+				ft_memset ft_bzero ft_memcpy ft_memmove ft_memchr ft_memcmp ft_strnstr \
+				ft_atoi ft_calloc ft_strdup ft_substr ft_strjoin ft_strtrim ft_split ft_itoa ft_strmapi ft_striteri \
+				ft_putchar_fd ft_putstr_fd ft_putendl_fd ft_putnbr_fd \
+				ft_lstnew ft_lstadd_front ft_lstsize ft_lstlast ft_lstadd_back ft_lstdelone ft_lstclear ft_lstiter ft_lstmap \
+				ft_printf ft_print_hex ft_putunsign ft_putvoidptr ft_putcharf ft_putnbrf ft_putstrf ft_get_flags ft_printf_utils ft_putnbrstrf
+
+SRCS 		= 	$(addprefix $(SRCS_DIR), $(addsuffix .c, $(SRC_FILES)))
+OBJS 		= 	$(addprefix $(OBJS_DIR), $(addsuffix .o, $(SRC_FILES)))
+
+#######
+
+OBJSF		=	.cache_exists
 
 all:	$(NAME)
 
-*.o:	*.c
-		$(CC) $(CFLAGS) -c %< -o %@
+$(OBJS_DIR)%.o:		$(SRCS_DIR)%.c | $(OBJSF)
+					$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+
+$(OBJSF):
+			mkdir -p $(OBJS_DIR)
 
 $(NAME):	$(OBJS)
 			$(AR) $(NAME) $(OBJS)
 
-bonus:		$(BOBJS)
-			$(AR) $(NAME) $(BOBJS)
-
 clean:
-		rm -rf $(OBJS)
-		rm -rf $(BOBJS)
+		rm -rf $(OBJS_DIR)
+		rm -rf $(OBJSF)
 
 fclean:	clean
 		rm -rf $(NAME)
 
-re:	fclean all bonus
+re:	fclean all
 
 .PHONY:	all clean fclean re
